--- a/eggs/gingerbread.html
+++ b/eggs/gingerbread.html
@@ -13,6 +13,6 @@
 
   <div class="toast" style="display: none; width: 200px;" id="toast"></div>
 
-  <script type="text/javascript" src="/static/js/eggs/gingerbread.js"></script>
+  <script type="text/javascript" src="/static/js/eggs.js"></script>
  </body>
 </html>
