Обновление главной страницы
1) Добавлена ссылка на пасхалку Android 4.0 Ice Cream Sandwich;
2) добавлена «Для разработчиков Android»;
3) немного изменён текст сообщения о том, что не все пасхалки доступны.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
  <body>
   <h1>Пасхальные яйца из Android</h1>
   <p style="color: grey; padding-left: 10px;">Попробуйте пасхальные яйца из разных версий Android прямо в браузере!</p>
-  <div class="alert-warn"><p>⚠️ Пока доступны пасхальные яйца не изо всех версий Android.</p></div>
-  <p style="padding-left: 10px;">v1.0 • <a href="https://github.com/App327/web-androidEasterEggs/" target="_blank">GitHub ↗️</a> | <a href="https://www.android.com/" target="_blank">Сайт Android ↗️</a></p>
+  <div class="alert-warn"><p>⚠️ Пока доступны не все пасхальные яйца.</p></div>
+  <p style="padding-left: 10px;">v1.0 • <a href="https://github.com/App327/web-androidEasterEggs/" target="_blank">GitHub ↗️</a> | <a href="https://www.android.com/" target="_blank">Сайт Android ↗️</a> | <a href="https://developer.android.com/" target="_blank">Сайт Android для разработчиков ↗️</a></p>
   <hr noshade color="silver">
   <ul>
    <li><a href="/eggs/gingerbread.html">Android 2.3 Gingerbread</a></li>
    <li><a href="/eggs/honeycomb.html">Android 3.0 Honeycomb</a></li>
+   <li><a href="/eggs/ice_cream_sandwich.html">Android 4.0 Ice Cream Sandwich</a></li>
   </ul>
   <hr noshade color="silver">
   <p class="trademarks">Google, Android, Google Play и другие названия являются товарными знаками компании Google LLC.</p>
