--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <li><a href="/eggs/gingerbread.html">Android 2.3 Gingerbread</a></li>
    <li><a href="/eggs/honeycomb.html">Android 3.0 Honeycomb</a></li>
    <li><a href="/eggs/ice_cream_sandwich.html">Android 4.0 Ice Cream Sandwich</a></li>
+   <li><a href="/eggs/.html" class="egg-unavailable">Android </a></li>
   </ul>
   <hr noshade color="silver">
   <p class="trademarks">Google, Android, Google Play и другие названия являются товарными знаками компании Google LLC.</p>
