--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
    <li><a href="/eggs/gingerbread.html">Android 2.3 Gingerbread</a></li>
    <li><a href="/eggs/honeycomb.html">Android 3.0 Honeycomb</a></li>
    <li><a href="/eggs/ice_cream_sandwich.html">Android 4.0 Ice Cream Sandwich</a></li>
-   <li><a href="/eggs/.html" class="egg-unavailable">Android </a></li>
+   <li><a href="/eggs/jelly_bean.html" class="egg-unavailable">Android 4.1 – 4.3 Jelly Bean</a></li>
+   <li><a href="/eggs/kitkat.html" class="egg-unavailable">Android 4.4 KitKat</a></li>
+   <li><a href="/eggs/lollipop.html" class="egg-unavailable">Android 5.0 Lollipop</a></li>
+   <li><a href="/eggs/marshmallow.html" class="egg-unavailable">Android 6.0 Marshmallow</a></li>
+   <li><a href="/eggs/nougat.html" class="egg-unavailable">Android 7.0 Nougat</a></li>
+   <li><a href="/eggs/oreo-8.0.html" class="egg-unavailable">Android 8.0 Oreo</a></li>
+   <li><a href="/eggs/oreo-8.1.html" class="egg-unavailable">Android 8.1 Oreo</a></li>
+   <li><a href="/eggs/pie.html" class="egg-unavailable">Android 9.0 Pie</a></li>
+   <li><a href="/eggs/quince_tart-queen_cake.html" class="egg-unavailable">Android 10 Quince Tart / Queen Cake</a></li>
+   <li><a href="/eggs/red_velvet_cake.html" class="egg-unavailable">Android 11 Red Velvet Cake</a></li>
+   <li><a href="/eggs/snow_cone.html" class="egg-unavailable">Android 12 Snow Cone</a></li>
+   <li><a href="/eggs/tiramisu.html" class="egg-unavailable">Android 13 Tiramisu</a></li>
+   <li><a href="/eggs/upside_down_cake.html" class="egg-unavailable">Android 14 Upside Down Cake</a></li>
+   <li><a href="/eggs/vanilla_ice_cream.html" class="egg-unavailable">Android 15 Vanilla Ice Cream</a></li>
   </ul>
   <hr noshade color="silver">
   <p class="trademarks">Google, Android, Google Play и другие названия являются товарными знаками компании Google LLC.</p>
