--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body>
   <h1>Пасхальные яйца из Android</h1>
   <p style="color: grey; padding-left: 10px;">Попробуйте пасхальные яйца из разных версий Android прямо в браузере!</p>
-  <div class="alert-warn"><p>⚠️ Пока доступны не все пасхальные яйца.</p></div>
+  <div class="alert-warn"><p>⚠️ Пока доступны не все пасхальные яйца. Недоступные выделены серым.</p></div>
   <p style="padding-left: 10px;">v1.0 • <a href="https://github.com/App327/web-androidEasterEggs/" target="_blank">GitHub ↗️</a> | <a href="https://www.android.com/" target="_blank">Сайт Android ↗️</a> | <a href="https://developer.android.com/" target="_blank">Сайт Android для разработчиков ↗️</a></p>
   <hr noshade color="silver">
   <ul>
